--- a/src/controls.html
+++ b/src/controls.html
@@ -644,11 +644,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
@@ -670,11 +667,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
@@ -696,11 +690,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
@@ -727,11 +718,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
@@ -758,11 +746,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
@@ -786,11 +771,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
@@ -999,11 +981,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
@@ -1027,11 +1006,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
@@ -1054,11 +1030,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
@@ -1086,11 +1059,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
@@ -1118,11 +1088,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
@@ -1147,11 +1114,8 @@ Value</textarea
                                             viewbox="0 0 24 24"
                                             xmlns="http://www.w3.org/2000/svg"
                                         >
-                                            <path
-                                                d="M5 5L19 19M5 19L19 5"
-                                                stroke-width="2"
-                                                stroke-linecap="round"
-                                                stroke-linejoin="round"
+                                            <use
+                                                href="/icons/icon-sprite.svg#x-close-delete"
                                             />
                                         </svg>
                                     </button>
