paper refactoring, sections classes renamed

--- a/src/components.html
+++ b/src/components.html
@@ -33,12 +33,12 @@
         <main>
             <div class="container">
                 <!-- Headers -->
-                <section class="headers">
+                <section class="headers-section">
                     <h2 class="section-heading">
                         <span class="section-heading__number">12.</span>
                         Headers
                     </h2>
-                    <div class="headers__wrapper section-wrapper">
+                    <div class="headers-section__wrapper section-wrapper">
                         <!-- Header -->
                         <header class="header">
                             <a href="/" class="header__logo-link">
@@ -78,14 +78,14 @@
                     </div>
                 </section>
                 <!-- Flaps -->
-                <section class="flaps">
+                <section class="flaps-section">
                     <h2 class="section-heading">
                         <span class="section-heading__number">13.</span>
                         Flaps
                     </h2>
-                    <div class="flaps__wrapper section-wrapper">
+                    <div class="flaps-section__wrapper section-wrapper">
                         <!-- Flap (basic) -->
-                        <div class="flaps__item flap">
+                        <div class="flaps-section__item flap">
                             <div class="flap__content">
                                 <div
                                     class="
@@ -124,7 +124,7 @@
                             />
                         </div>
                         <!-- Flap right -->
-                        <div class="flaps__item flap flap--right">
+                        <div class="flaps-section__item flap flap--right">
                             <div class="flap__content">
                                 <div
                                     class="
@@ -163,7 +163,7 @@
                             />
                         </div>
                         <!-- Flap left -->
-                        <div class="flaps__item flap flap--left">
+                        <div class="flaps-section__item flap flap--left">
                             <div class="flap__content">
                                 <div
                                     class="
@@ -201,9 +201,9 @@
                                 class="flap__image"
                             />
                         </div>
-                        <div class="flaps__grid">
+                        <div class="flaps-section__grid">
                             <!-- Flap bullet -->
-                            <div class="flaps__item flap flap--bullet">
+                            <div class="flaps-section__item flap flap--bullet">
                                 <div class="flap__content">
                                     <div
                                         class="
@@ -248,7 +248,7 @@
                                 />
                             </div>
                             <!-- Flap bullet -->
-                            <div class="flaps__item flap flap--bullet">
+                            <div class="flaps-section__item flap flap--bullet">
                                 <div class="flap__content">
                                     <div
                                         class="
@@ -293,7 +293,7 @@
                                 />
                             </div>
                             <!-- Flap bullet -->
-                            <div class="flaps__item flap flap--bullet">
+                            <div class="flaps-section__item flap flap--bullet">
                                 <div class="flap__content">
                                     <div
                                         class="
@@ -338,7 +338,7 @@
                                 />
                             </div>
                             <!-- Flap bullet -->
-                            <div class="flaps__item flap flap--bullet">
+                            <div class="flaps-section__item flap flap--bullet">
                                 <div class="flap__content">
                                     <div
                                         class="
@@ -383,7 +383,7 @@
                                 />
                             </div>
                             <!-- Flap bullet -->
-                            <div class="flaps__item flap flap--bullet">
+                            <div class="flaps-section__item flap flap--bullet">
                                 <div class="flap__content">
                                     <div
                                         class="
@@ -428,7 +428,7 @@
                                 />
                             </div>
                             <!-- Flap bullet -->
-                            <div class="flaps__item flap flap--bullet">
+                            <div class="flaps-section__item flap flap--bullet">
                                 <div class="flap__content">
                                     <div
                                         class="
@@ -473,7 +473,7 @@
                                 />
                             </div>
                             <!-- Flap bullet -->
-                            <div class="flaps__item flap flap--bullet">
+                            <div class="flaps-section__item flap flap--bullet">
                                 <div class="flap__content">
                                     <div
                                         class="
@@ -518,7 +518,7 @@
                                 />
                             </div>
                             <!-- Flap bullet -->
-                            <div class="flaps__item flap flap--bullet">
+                            <div class="flaps-section__item flap flap--bullet">
                                 <div class="flap__content">
                                     <div
                                         class="
@@ -566,14 +566,14 @@
                     </div>
                 </section>
                 <!-- Modals -->
-                <section class="modals">
+                <section class="modals-section">
                     <h2 class="section-heading">
                         <span class="section-heading__number">14.</span>
                         Modals
                     </h2>
-                    <div class="modals__wrapper section-wrapper">
+                    <div class="modals-section__wrapper section-wrapper">
                         <!-- Modal (basic) -->
-                        <div class="modals__item modal">
+                        <div class="modals-section__item modal">
                             <div class="modal__overlay"></div>
                             <div class="modal__content">
                                 <button
@@ -623,7 +623,12 @@
                             </div>
                         </div>
                         <!-- Modal with actions -->
-                        <div class="modals__item modal modal--with-actions">
+                        <div
+                            class="
+                                modals-section__item
+                                modal modal--with-actions
+                            "
+                        >
                             <div class="modal__overlay"></div>
                             <div class="modal__content">
                                 <button
@@ -686,14 +691,14 @@
                     </div>
                 </section>
                 <!-- Callouts -->
-                <section class="callouts">
+                <section class="callouts-section">
                     <h2 class="section-heading">
                         <span class="section-heading__number">15.</span>
                         Callouts
                     </h2>
-                    <div class="callouts__wrapper section-wrapper">
+                    <div class="callouts-section__wrapper section-wrapper">
                         <!-- Callout bright (basic) -->
-                        <div class="callouts__item callout">
+                        <div class="callouts-section__item callout">
                             <h2 class="callout__heading typography">
                                 Callout Title
                             </h2>
@@ -722,7 +727,9 @@
                             </div>
                         </div>
                         <!-- Callout dark -->
-                        <div class="callouts__item callout callout--dark">
+                        <div
+                            class="callouts-section__item callout callout--dark"
+                        >
                             <h2 class="callout__heading typography">
                                 Callout Title
                             </h2>
@@ -753,7 +760,7 @@
                         <!-- Callout micro dark -->
                         <div
                             class="
-                                callouts__item
+                                callouts-section__item
                                 callout callout--micro callout--dark
                             "
                         >
@@ -783,7 +790,12 @@
                             </div>
                         </div>
                         <!-- Callout micro bright -->
-                        <div class="callouts__item callout callout--micro">
+                        <div
+                            class="
+                                callouts-section__item
+                                callout callout--micro
+                            "
+                        >
                             <h2 class="callout__heading typography">
                                 Callout Title
                             </h2>
@@ -822,15 +834,15 @@
                     </div>
                 </section>
                 <!-- Cards -->
-                <section class="cards">
+                <section class="cards-section">
                     <h2 class="section-heading">
                         <span class="section-heading__number">17.</span>
                         Cards
                     </h2>
-                    <div class="cards__wrapper section-wrapper">
-                        <div class="cards__common">
+                    <div class="cards-section__wrapper section-wrapper">
+                        <div class="cards-section__common">
                             <!-- Card generic (basic) -->
-                            <div class="cards__common-item card">
+                            <div class="cards-section__common-item card">
                                 <button
                                     class="
                                         card__more
@@ -876,7 +888,7 @@
                             <!-- Card fill -->
                             <div
                                 class="
-                                    cards__common-item
+                                    cards-section__common-item
                                     card card--menu card--fill
                                 "
                             >
@@ -923,7 +935,12 @@
                                 </button>
                             </div>
                             <!-- Card text -->
-                            <div class="cards__common-item card card--text">
+                            <div
+                                class="
+                                    cards-section__common-item
+                                    card card--text
+                                "
+                            >
                                 <button
                                     class="
                                         card__more
@@ -967,11 +984,11 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="cards__solid">
+                        <div class="cards-section__solid">
                             <!-- Card solid primary -->
                             <div
                                 class="
-                                    cards__solid-item
+                                    cards-section__solid-item
                                     card card--menu card--solid-primary
                                 "
                             >
@@ -1020,7 +1037,7 @@
                             <!-- Card solid accent -->
                             <div
                                 class="
-                                    cards__solid-item
+                                    cards-section__solid-item
                                     card card--menu card--solid-accent
                                 "
                             >
@@ -1069,7 +1086,7 @@
                             <!-- Card solid warning -->
                             <div
                                 class="
-                                    cards__solid-item
+                                    cards-section__solid-item
                                     card card--menu card--solid-warning
                                 "
                             >
@@ -1118,7 +1135,7 @@
                             <!-- Card solid success -->
                             <div
                                 class="
-                                    cards__solid-item
+                                    cards-section__solid-item
                                     card card--menu card--solid-success
                                 "
                             >
@@ -1167,7 +1184,7 @@
                             <!-- Card solid error -->
                             <div
                                 class="
-                                    cards__solid-item
+                                    cards-section__solid-item
                                     card card--menu card--solid-error
                                 "
                             >
@@ -1217,14 +1234,14 @@
                     </div>
                 </section>
                 <!-- Forms -->
-                <section class="forms">
+                <section class="forms-section">
                     <h2 class="section-heading">
                         <span class="section-heading__number">18.</span>
                         Forms
                     </h2>
-                    <div class="forms__wrapper section-wrapper">
+                    <div class="forms-section__wrapper section-wrapper">
                         <!-- Form contact -->
-                        <div class="forms__contact form">
+                        <form class="forms-section__contact form">
                             <div class="form__header">
                                 <h2
                                     class="
@@ -1337,14 +1354,15 @@
                                         form__submit
                                         button button--contained
                                     "
+                                    type="submit"
                                 >
                                     Send Message
                                 </button>
                                 <a href="/" class="form__link"></a>
                             </div>
-                        </div>
+                        </form>
                         <!-- Form sign in -->
-                        <div class="forms__sign-in form">
+                        <form class="forms-section__sign-in form">
                             <div class="form__header">
                                 <h2
                                     class="
@@ -1426,6 +1444,7 @@
                                         button--contained
                                         button--full-width
                                     "
+                                    type="submit"
                                 >
                                     Sign In
                                 </button>
@@ -1435,9 +1454,9 @@
                                     >Forgot password?</a
                                 >
                             </div>
-                        </div>
+                        </form>
                         <!-- Form create an account -->
-                        <div class="forms__sign-up form">
+                        <form class="forms-section__sign-up form">
                             <div class="form__header">
                                 <h2
                                     class="
@@ -1558,6 +1577,7 @@
                                         button--contained
                                         button--full-width
                                     "
+                                    type="submit"
                                 >
                                     Sign Up
                                 </button>
@@ -1566,9 +1586,9 @@
                                     class="form__link form__link--footer"
                                 ></a>
                             </div>
-                        </div>
+                        </form>
                         <!-- Form reset password -->
-                        <div class="forms__reset-password form">
+                        <form class="forms-section__reset-password form">
                             <div class="form__header">
                                 <h2
                                     class="
@@ -1624,6 +1644,7 @@
                                         button--contained
                                         button--full-width
                                     "
+                                    type="submit"
                                 >
                                     Send Reset Link
                                 </button>
@@ -1633,7 +1654,7 @@
                                     >Back to Sign in</a
                                 >
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </section>
             </div>
