--- a/src/components.html
+++ b/src/components.html
@@ -587,7 +587,7 @@
 					</div>
 				</section>
 				<!-- Modals -->
-				<section class="modals-section" style="display: none">
+				<section class="modals-section">
 					<h2 class="section-heading">
 						<span class="section-heading__number">14.</span>
 						Modals
@@ -712,7 +712,7 @@
 					</div>
 				</section>
 				<!-- Callouts -->
-				<section class="callouts-section" style="display: none">
+				<section class="callouts-section">
 					<h2 class="section-heading">
 						<span class="section-heading__number">15.</span>
 						Callouts
@@ -809,6 +809,22 @@
 									Action
 								</button>
 							</div>
+							<button
+								class="
+									callout__more
+									icon-button icon-button--large
+								"
+							>
+								<svg
+									class="icon-button__icon"
+									viewbox="0 0 24 24"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<use
+										href="/icons/icon-sprite.svg#more-vertical"
+									/>
+								</svg>
+							</button>
 						</div>
 						<!-- Callout micro bright -->
 						<div
@@ -841,6 +857,22 @@
 									Action
 								</button>
 							</div>
+							<button
+								class="
+									callout__more
+									icon-button icon-button--large
+								"
+							>
+								<svg
+									class="icon-button__icon"
+									viewbox="0 0 24 24"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<use
+										href="/icons/icon-sprite.svg#more-vertical"
+									/>
+								</svg>
+							</button>
 						</div>
 					</div>
 				</section>
@@ -905,7 +937,7 @@
 										xmlns="http://www.w3.org/2000/svg"
 									>
 										<use
-											href="#/icons/icon-sprite.svg#more-vertical"
+											href="/icons/icon-sprite.svg#more-vertical"
 										/>
 									</svg>
 								</button>
